mdapi/objects/Survey_Response__c.object
<CustomObject>
    <label>Survey Response</label>
    <nameField>
        <displayFormat>SR-{000000}</displayFormat>
        <label>Survey Response Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Responses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Survey Responses</relationshipLabel>
        <relationshipName>Survey_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Invitation_Key__c</fullName>
        <description>Field stores a unique Survey Invitation Key used for identification purposes.</description>
        <inlineHelpText>Field stores a unique Survey Invitation Key used for identification purposes.</inlineHelpText>
        <label>Invitation Key</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Response_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if recipient submitted his response.</description>
        <inlineHelpText>Checked if recipient submitted his response.</inlineHelpText>
        <label>Response Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Survey__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Survey</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Only Surveys in Final Version are applicable. Choose another one.</errorMessage>
            <filterItems>
                <field>Survey__c.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Final_Version</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Survey__c</referenceTo>
        <relationshipLabel>Survey Responses</relationshipLabel>
        <relationshipName>Survey_Responses</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
</CustomObject>